--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "framer-motion": "^12.23.24",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
+    "mongodb": "^7.0.0",
     "mongoose": "^8.19.3",
     "next": "^16.0.0",
     "next-auth": "^5.0.0-beta.25",
